biscuit-terminal/lib/tests/snapshots/layout_matrix__TerminalImage__align_center.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
                              [[Image: tiny.png]]
---
VIA_TREE_DIRECT
                              [[Image: tiny.png]]
